nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-nginx-example0
  labels:
    app: istio-nginx-example0
    service: istio-nginx-example0
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: istio-nginx-example0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-nginx-example0-v1
  labels:
    app: istio-nginx-example0
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-nginx-example0
      version: v1
  template:
    metadata:
      labels:
        app: istio-nginx-example0
        version: v1
    spec:
      containers:
      - name: istio-nginx-example0
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
